# colorhug2-hardware

./: .gitignore  Makefile.am  README  autogen.sh  colorhug-hardware.spec.in  configure.ac  hardware.pcb  hardware.sch
symbols/: .gitignore  23K640.tsym  L78L33AC.tsym  LR1108-A.tsym  MCDC04.tsym  MTCSiCF.tsym  Makefile  Makefile.am  PIC18F46J50.tsym  TCN75A.tsym  TCS3200.tsym  testpad_1mm-1.sym
